--- a/EasyEnglish.Core/EasyEnglish.Core.csproj
+++ b/EasyEnglish.Core/EasyEnglish.Core.csproj
@@ -8,12 +8,14 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Interfaces\" />
-    <Folder Include="Enums\" />
   </ItemGroup>
 
   <ItemGroup>
 	<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MukhaLib.Database\MukhaLib.Database.csproj" />
   </ItemGroup>
 
 </Project>
