--- a/EasyEnglish.Theme.Demo/EasyEnglish.Theme.Demo.csproj
+++ b/EasyEnglish.Theme.Demo/EasyEnglish.Theme.Demo.csproj
@@ -14,7 +14,7 @@
         <!-- For example: <RuntimeIdentifiers>maccatalyst-x64;maccatalyst-arm64</RuntimeIdentifiers> -->
 
         <OutputType>Exe</OutputType>
-        <RootNamespace>EasyEnglish.App</RootNamespace>
+        <RootNamespace>EasyEnglish.Theme.Demo</RootNamespace>
         <UseMaui>true</UseMaui>
         <SingleProject>true</SingleProject>
         <ImplicitUsings>enable</ImplicitUsings>
@@ -22,10 +22,10 @@
         <Nullable>enable</Nullable>
 
         <!-- Display name -->
-        <ApplicationTitle>EasyEnglish.App</ApplicationTitle>
+        <ApplicationTitle>EasyEnglish.Theme.Demo</ApplicationTitle>
 
         <!-- App Identifier -->
-        <ApplicationId>com.companyname.easyenglish.app</ApplicationId>
+        <ApplicationId>com.companyname.easyenglish.theme.demo</ApplicationId>
 
         <!-- Versions -->
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
@@ -61,22 +61,13 @@
     </ItemGroup>
 
     <ItemGroup>
-        <!-- .NET MAUI -->
-		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.81" />
-		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="9.0.81" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="9.0.81" />
-        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.7" />
-		
-		<!-- Entity Framework for app -->
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
+        <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
     </ItemGroup>
 
-	<ItemGroup>
-		<!-- Project References -->
-		<ProjectReference Include="..\EasyEnglish.Core\EasyEnglish.Core.csproj" />
-		<ProjectReference Include="..\EasyEnglish.Data\EasyEnglish.Data.csproj" />
-		<ProjectReference Include="..\EasyEnglish.Services\EasyEnglish.Services.csproj" />
-		<ProjectReference Include="..\EasyEnglish.Theme\EasyEnglish.Theme.csproj" />
-	</ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\EasyEnglish.Theme\EasyEnglish.Theme.csproj" />
+    </ItemGroup>
 
 </Project>
